# WompWomp

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
Cmake/: EmbedShader.cmake  LinkGLFW.cmake  LinkGLM.cmake  LinkVMA.cmake  LinkVkBootstrap.cmake
Shaders/: basic.frag  basic.vert
TestBed/: CMakeLists.txt
TestBed/src/: App.cpp  App.h  main.cpp
WompLib/: CMakeLists.txt
WompLib/include/womp/: Renderer.h  Womp.h  WompMath.h  WompRenderer.h
WompLib/shaders/: basic.frag
WompLib/src/: Chalk.h
WompLib/src/Core/: Window.cpp  WompMath.cpp
WompLib/src/Descriptors/: DescriptorSetLayout.cpp  DescriptorSetLayout.h
WompLib/src/Rendering/: DebugLabel.cpp  DebugLabel.h  Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Swapchain.cpp  Swapchain.h  WompRenderer.cpp
WompLib/src/Rendering/Resources/: Buffer.cpp  Image.cpp  ImageView.h  Sampler.cpp  Sampler.h
src/: App.cpp  App.h
src/Core/: Window.cpp  Window.h  WompMath.cpp
src/Descriptors/: DescriptorPool.cpp  DescriptorPool.h  DescriptorWriter.cpp  DescriptorWriter.h
src/Rendering/: Buffer.cpp  Buffer.h  DebugLabel.h  Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  WompRenderer.cpp  WompRenderer.h
src/Rendering/Resources/: Buffer.h  Image.cpp  Image.h  ImageView.cpp  Sampler.cpp
